--- a/calculator1.html
+++ b/calculator1.html
@@ -21,19 +21,19 @@
             <input type="button" class="formButton" id="btn7" value="7" onclick="calcform.display.value +='7'">
             <input type="button" class="formButton" id="btn8" value="8" onclick="calcform.display.value +='8'">
             <input type="button" class="formButton" id="btn9" value="9" onclick="calcform.display.value +='9'">
-            <input type="button" class="formButton" id="btnminus" value="-" onclick="document.calcform.display.value += '-'">
+            <input type="button" class="formButton" id="btnminus" value="-" onclick="calcform.display.value += '-'">
         </div>
         <div>
             <input type="button" class="formButton" id="btn4" value="4" onclick="calcform.display.value +='4'">
             <input type="button" class="formButton" id="btn5" value="5" onclick="calcform.display.value +='5'">
             <input type="button" class="formButton" id="btn6" value="6" onclick="calcform.display.value +='6'">
-            <input type="button" class="formButton" id="btnmul" value="*" onclick="document.calcform.display.value += '*'">
+            <input type="button" class="formButton" id="btnmul" value="*" onclick="calcform.display.value += '*'">
         </div>
         <div>
             <input type="button" class="formButton" id="btn1" value="1" onclick="calcform.display.value +='1'">
             <input type="button" class="formButton" id="btn2" value="2" onclick="calcform.display.value +='2'">
             <input type="button" class="formButton" id="btn3" value="3" onclick="calcform.display.value +='3'">
-            <input type="button" class="formButton" id="btndiv" value="/" onclick="document.calcform.display.value += '/'">
+            <input type="button" class="formButton" id="btndiv" value="/" onclick="calcform.display.value += '/'">
         </div>
         <div>
             <input type="button" class="formButton" id="btn0" value="0" onclick="calcform.display.value +='0'" >
